--- a/templates/anime_downloader_linkkf_request.html
+++ b/templates/anime_downloader_linkkf_request.html
@@ -941,30 +941,47 @@
             backdrop-filter: blur(8px) !important;
         }
         
-        #loading img {
+        #loading img,
+        #loading svg {
             display: none !important;
+            visibility: hidden !important;
+            width: 0 !important;
+            height: 0 !important;
         }
         
-        #loading::after {
+        #loading::before {
             content: '';
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
             width: 50px;
             height: 50px;
             border: 4px solid rgba(96, 165, 250, 0.2);
             border-top-color: #60a5fa;
             border-radius: 50%;
             animation: loader-spin 0.8s linear infinite;
+            z-index: 100001;
         }
         
         @keyframes loader-spin {
-            to { transform: rotate(360deg); }
+            to { transform: translate(-50%, -50%) rotate(360deg); }
         }
         
-        #modal_loading img {
+        #modal_loading img,
+        #modal_loading svg {
             display: none !important;
+            visibility: hidden !important;
+            width: 0 !important;
+            height: 0 !important;
         }
         
-        #modal_loading::after {
+        #modal_loading::before {
             content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
             width: 40px;
             height: 40px;
             border: 3px solid rgba(96, 165, 250, 0.2);
